--- a/index.html
+++ b/index.html
@@ -12,15 +12,170 @@
 
 		<!-- Styling -->
 		<link rel="stylesheet" type="text/css" href="lib/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/home.css">
 
 		<!-- Javascript -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
+
+		<!-- Firefox OS Building Blocks -->
+		<link rel="stylesheet" href="lib/Building-Blocks/style/action_menu.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/buttons.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/confirm.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/edit_mode.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/headers.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/input_areas.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/status.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style/switches.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/drawer.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/lists.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/progress_activity.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/scrolling.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/seekbars.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/tabs.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/style_unstable/toolbars.css">
+
+		<!-- Icons -->
+		<link rel="stylesheet" href="lib/Building-Blocks/icons/styles/action_icons.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/icons/styles/media_icons.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/icons/styles/comms_icons.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/icons/styles/settings_icons.css">
+
+		<!-- Transitions -->
+		<link rel="stylesheet" href="lib/Building-Blocks/transitions.css">
+		
+		<!-- Util CSS: some extra tricks -->
+		<link rel="stylesheet" href="lib/Building-Blocks/util.css">
+		<link rel="stylesheet" href="lib/Building-Blocks/fonts.css">
+
+		<!-- Additional markup to make Building Blocks kind of cross browser -->
+		<link rel="stylesheet" href="lib/Building-Blocks/cross_browser.css">
+
+		<!-- Some stuff that isn't included for some reason. -->
+		<link rel="stylesheet" type="text/css" href="css/building-blocks.css">
+	</head>
+
 	<body>
-		<header>		
+	<section id="index" data-position="current">
+		<section data-type="sidebar">
+			<header>
+				<menu type="toolbar">
+					<a href="#">Done</a>
+				</menu>
+				<h1>Drawer demo</h1>
+			</header>
+			<nav>
+				<ul>
+					<li><a href="#">item 1</a></li>
+					<li><a href="#">item 2</a></li>
+					<li><a href="#">item 3</a></li>
+				</ul>
+				<h2>Tis is a subtitle</h2>
+				<ul>
+					<li><a href="#">item 4</a></li>
+					<li><a href="#">item 5</a></li>
+					<li><a href="#">item 6</a></li>
+				</ul>
+			</nav>
+		</section>
+
+	<section id="drawer" class="skin-organic" role="region">
+			<header class="fixed">
+				<a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+				<a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+				<h1>Droplets</h1>
+			</header>
+			<article class="content scrollable header">
+				<div data-type="list">
+					<ul>
+						<li>
+							<a id="btn-action-menu" href="#">
+								<p>Action menu</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-buttons" href="#">
+								<p>Buttons</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-edit-mode" href="#">
+								<p>Edit mode</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-headers" href="#">
+								<p>Headers</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-input-areas" href="#">
+								<p>Input areas</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-status" href="#">
+								<p>Status</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-switches" href="#">
+								<p>Switches</p>
+							</a>
+						</li>
+						<li>
+							<a href="#drawer">
+								<p>Drawer</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-lists" href="#">
+								<p>Lists</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-progress" href="#">
+								<p>Progress and activity</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-scrolling" href="#">
+								<p>Scrolling</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-seek-bars" href="#">
+								<p>Seek bars</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-tabs" href="#">
+								<p>Tabs</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-filters" href="#">
+								<p>Filters</p>
+							</a>
+						</li>
+						<li>
+							<a id="btn-toolbars" href="#">
+								<p>Toolbars</p>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</article>
+		</section> <!-- end drawer -->
+	</section> <!-- end index -->
+
+	</body>
+
+
+	<body>
+		<!--<header>
+			<div class="btn left"><button class="action-icon settings">settings</button></div>
 			<p class="header-label">Droplets</p>
+			<div class="btn right">Refresh</div>
 		</header>
 
 		<div id="Home" class="screen">
@@ -39,7 +194,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 		<!--<footer>
 			Developed by <a href="http://about.me/nathanpc">Nathan Campos</a> (<a href="http://twitter.com/nathanpc">@nathanpc</a>) - Source code on <a href="https://github.com/nathanpc/rcalc">GitHub</a>.
