Made a bunch of changes and forgot to commit them

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 		<!-- Styling -->
 		<link rel="stylesheet" type="text/css" href="lib/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 		<!-- Javascript -->
+		<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script> -->
 		<script src="lib/jquery.min.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
 
-		<!-- Firefox OS Building Blocks -->
+		<!-- Everything Firefox OS Building Blocks below -->
 		<link rel="stylesheet" href="lib/Building-Blocks/style/action_menu.css">
 		<link rel="stylesheet" href="lib/Building-Blocks/style/buttons.css">
 		<link rel="stylesheet" href="lib/Building-Blocks/style/confirm.css">
@@ -55,7 +57,7 @@
 		<link rel="stylesheet" type="text/css" href="css/building-blocks.css">
 	</head>
 
-	<body>
+	<body onload="onload()">
 		<!-- Screen -->
 		<section id="index" data-position="current">
 			<!-- Drawer -->
@@ -114,6 +116,208 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="more-info">
+						<ul>
+							<li>
+								<i class="icon-tint"></i> <span class="humidity">73%</span>
+							</li>
+							<li>
+								<i class="icon-cloud"></i> <span class="wind">75%</span>
+							</li>
+							<li>
+								<i class="icon-leaf"></i> <span class="wind-speed">3.1</span>
+							</li>
+							<li>
+								<i class="icon-location-arrow"></i> <span class="wind-direction">170°</span>
+							</li>
+						</ul>
+					</div>
+
+					<footer class="forecast-container">
+						<ul>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+							<li class="forecast">
+								<div class="date">Fri</div>
+								<img src="assets/weather/00.png" />
+								<div class="minmax min">21.5 °C</div>
+								<div class="minmax max">29.1 °C</div>
+							</li>
+						</ul>
+					</footer>
 				</article>
 			</section>
 		</section>
