--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="js/main.js" type="text/javascript"></script>
 		<script src="js/weather.js" type="text/javascript"></script>
 		<script src="js/listing.js" type="text/javascript"></script>
+		<script src="js/settings.js" type="text/javascript"></script>
 
 		<!-- Everything Firefox OS Building Blocks below -->
 		<link rel="stylesheet" href="lib/Building-Blocks/style/action_menu.css">
@@ -73,6 +74,7 @@
 
 				<nav>
 					<ul>
+						<li onclick="action.refresh()"><a href="#">Refresh</a></li>
 						<li onclick="action.units_dialog('open')"><a href="#">Change Units</a></li>
 						<li onclick="action.push_screen('Set-Location')"><a href="#">Set Location</a></li>
 					</ul>
@@ -104,12 +106,12 @@
 							</div>
 
 							<div class="temp-container">
-								<div class="location">Vitoria, ES, Brazil</div>
+								<div class="location"></div>
 
-								<div class="temp">23.7 °C</div>
+								<div class="temp"></div>
 								<div class="minmax-container">
-									<div class="minmax min">21.5 °C</div>
-									<div class="minmax max">29.1 °C</div>
+									<div class="minmax min"></div>
+									<div class="minmax max"></div>
 								</div>
 							</div>
 						</div>
@@ -121,7 +123,7 @@
 									<i class="icon-tint"></i> <span class="humidity">73%</span>
 								</li>
 								<li>
-									<i class="icon-cloud"></i> <span class="wind">75%</span>
+									<i class="icon-cloud"></i> <span class="cloudiness">75%</span>
 								</li>
 								<li>
 									<i class="icon-leaf"></i> <span class="wind-speed">3.1 mph</span>
@@ -133,6 +135,7 @@
 						</div>
 					</div>
 
+					<!-- Forecast area -->
 					<footer class="forecast-container">
 						<ul>
 							<li class="forecast">
@@ -203,11 +206,6 @@
 			<article class="content scrollable header">
 				<div data-type="list">
 					<ul id="location-search-list">
-						<li>
-							<a href="#">
-								<p>Use Geolocation</p>
-							</a>
-						</li>
 					</ul>
 				</div>
 			</article>
