Implemented the forecast list

--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 						<div class="more-info">
 							<ul>
 								<li>
-									<i class="icon-tint"></i> <span class="humidity">73%</span>
+									<i class="icon-tint"></i> <span class="humidity"></span>
 								</li>
 								<li>
-									<i class="icon-cloud"></i> <span class="cloudiness">75%</span>
+									<i class="icon-cloud"></i> <span class="cloudiness"></span>
 								</li>
 								<li>
-									<i class="icon-leaf"></i> <span class="wind-speed">3.1 mph</span>
+									<i class="icon-leaf"></i> <span class="wind-speed"></span>
 								</li>
 								<li>
-									<i class="icon-location-arrow"></i> <span class="wind-direction">170°</span>
+									<i class="icon-location-arrow"></i> <span class="wind-direction"></span>
 								</li>
 							</ul>
 						</div>
@@ -138,48 +138,6 @@
 					<!-- Forecast area -->
 					<footer class="forecast-container">
 						<ul>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
-							<li class="forecast">
-								<div class="date">Fri</div>
-								<img src="assets/weather/00.png" />
-								<div class="minmax min">21.5 °C</div>
-								<div class="minmax max">29.1 °C</div>
-							</li>
 						</ul>
 					</footer>
 				</article>
