Implemented almost everything

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
 						<!-- Big weather indicator -->
 						<div id="big-container">
 							<div class="img-container">
-								<img src="assets/weather/00.png" />
+								<img />
 							</div>
 
 							<div class="temp-container">
 								<div class="location"></div>
+								<div class="description"></div>
 
 								<div class="temp"></div>
 								<div class="minmax-container">
