--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 		<!-- Javascript -->
-		<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script> -->
 		<script src="lib/jquery.min.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
 		<script src="js/weather.js" type="text/javascript"></script>
@@ -98,6 +97,12 @@
 
 				<!-- Contents -->
 				<article class="content scrollable header">
+					<!-- Loading indicator -->
+					<div id="loading">
+						<progress></progress>
+						<p>Getting weather information...</p>
+					</div>
+
 					<div id="weather-center">
 						<!-- Big weather indicator -->
 						<div id="big-container">
