Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<body onload="onload()">
 		<!-- Home Screen -->
-		<section id="index" role="region" data-position="current">
+		<section id="index" role="region" data-position="current" class="current">
 			<!-- Drawer -->
 			<section data-type="sidebar">
 				<header>
